--- a/style.css
+++ b/style.css
@@ -1088,3 +1088,30 @@ h3 {
     /* margin-left: 38%; */
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+
+/* CARRELLO */
+
+.prodottisel {
+    display: inline-block;
+    background-color: #e9dbc2;
+    border: 1.5px solid #be935b;
+    text-align: left;
+    margin: auto;
+    padding: 15px;
+    /* padding-right: 25px; */
+    padding-top: 7.5px;
+    /* padding-bottom: 10px; */
+}
+
+.prodottisel h1,
+h2,
+h3,
+h4 {
+    text-align: center;
+}
+
+.prodottisel li {
+    margin: 10px;
+    margin-left: 0px;
+}
