--- a/style.css
+++ b/style.css
@@ -1050,6 +1050,9 @@ h3 {
     font-size: 15px;
 }
 
+
+/* ACCOUNT */
+
 .fotoaccount {
     display: flex;
     align-items: center;
@@ -1087,6 +1090,62 @@ h3 {
     width: 100%;
     /* margin-left: 38%; */
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.tabellaaccount {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.tabellaaccount .container {
+    width: 30%;
+    height: 100%;
+    background-color: #ebcba1;
+}
+
+.tabellaaccount img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 50%;
+    margin: auto;
+    margin-top: 10%;
+}
+
+.tabellaaccount p {
+    padding-left: 30%;
+    padding-right: 30%;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.tabellaaccount a {
+    color: black;
+}
+
+.figurecaption {
+    margin-top: 5%;
+    font-size: 20px;
+    color: black;
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .tabellaaccount .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+    .spazio {
+        display: flex;
+    }
 }
 
 
