sistemato tabella account

--- a/style.css
+++ b/style.css
@@ -1101,7 +1101,7 @@ h3 {
 
 .tabellaaccount .container {
     width: 30%;
-    height: 100%;
+    height: 250px;
     background-color: #ebcba1;
 }
 
