--- a/style.css
+++ b/style.css
@@ -1066,6 +1066,7 @@ h3 {
 .fotoaccount img {
     margin-left: 0px;
     width: 100%;
+    height: 350px;
     margin-top: -150px;
 }
 
@@ -1075,7 +1076,7 @@ h3 {
     z-index: 2;
     color: burlywood;
     /* color: black; */
-    margin-top: 90px;
+    margin-top: 25px;
     position: absolute;
     top: 0;
     text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
@@ -1085,7 +1086,7 @@ h3 {
     font-size: 40px;
     z-index: 2;
     color: burlywood;
-    margin-top: -150px;
+    margin-top: 20x;
     position: absolute;
     width: 100%;
     /* margin-left: 38%; */
