--- a/style.css
+++ b/style.css
@@ -1126,6 +1126,10 @@ h3 {
     color: black;
 }
 
+.tabellaaccount a:hover {
+    font-size: 22px;
+}
+
 .figurecaption {
     margin-top: 5%;
     font-size: 20px;
