--- a/style.css
+++ b/style.css
@@ -1184,20 +1184,32 @@ h4 {
 /* DATI PERSONALI */
 
 .contenuto {
-    width: 550px;
-    margin: auto;
-    padding: 15px;
+    width: 100%;
     text-align: center;
-    /* background-color: white; */
-    padding-bottom: 35px;
 }
 
-#tab_datipersonali {
-    /* width: 500px; */
-    text-align: left;
+.form_modificadati {
+    color: burlywood;
+    text-align: center;
     margin: auto;
+    font-size: 20px;
+    font-family: sans-serif;
+    margin-top: 40px;
+    font-weight: bold;
 }
 
-.input_dati_personali {
-    width: 300px;
+#tab_modificadati {
+    text-align: center;
+    margin: auto;
+    padding: 20px;
+}
+
+.input_datipersonali {
+    color: burlywood;
+    text-align: center;
+    margin: auto;
+    font-size: 20px;
+    font-family: sans-serif;
+    margin-top: 40px;
+    font-weight: bold;
 }
