modifica pulsanti dati

--- a/style.css
+++ b/style.css
@@ -1266,7 +1266,7 @@ h4 {
 }
 
 .compracarr {
-    align: center;
+    /*align: center;*/
     text-align: center;
     align-items: center;
     width: 100px;
