sistemato link in assistenza e stile di compra

--- a/style.css
+++ b/style.css
@@ -1275,3 +1275,14 @@ h4 {
 .pulsanti {
     text-align: center;
 }
+
+/* COMPRA */
+
+.form_modificaindirizzo {
+    color: burlywood;
+    text-align: center;
+    margin: auto;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+}
