--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ h3 {
     padding-bottom: 30px;
 }
 
+h2 a {
+    color: #000;
+    font-size: 50px;
+    font-weight: 600;
+}
+
 .big-text {
     font-size: 70px;
     font-weight: 900;
@@ -1138,7 +1144,6 @@ h3 {
     width: 30%;
     height: 250px;
     background-color: #ebcba1;
-    position: fixed;
 }
 
 .tabellaaccount img {
@@ -1149,7 +1154,6 @@ h3 {
     height: 50%;
     margin: auto;
     margin-top: 10%;
-    position: fixed;
 }
 
 .tabellaaccount p {
@@ -1171,7 +1175,6 @@ h3 {
     font-size: 20px;
     color: black;
     text-align: center;
-    position: fixed;
 }
 
 @media (max-width: 768px) {
@@ -1200,9 +1203,7 @@ h3 {
     text-align: left;
     margin: auto;
     padding: 15px;
-    /* padding-right: 25px; */
     padding-top: 7.5px;
-    /* padding-bottom: 10px; */
 }
 
 .prodottisel h1,
@@ -1300,6 +1301,12 @@ h4 {
     transform: translate(50%, 50%); */
 }
 
-.indirizzo {
-    width: 100%;
+.cindirizzo {
+    display: inline-block;
+    background-color: #e9dbc2;
+    border: 1.5px solid #be935b;
+    text-align: center;
+    margin: auto;
+    padding: 15px;
+    padding-top: 7.5px;
 }
