--- a/style.css
+++ b/style.css
@@ -1329,8 +1329,8 @@ h4 {
     margin: auto;
     margin-bottom: 20px;
     margin-left: 30px;
-    padding: 15px;
-    padding-top: 7.5px;
+    padding: 10px;
+    margin-right: 30px;
 }
 
 .recensione p {
@@ -1345,15 +1345,16 @@ h4 {
 
 .bold {
     font-weight: bold;
+    margin-left: 3px;
 }
 
 .testo {
     display: inline-block;
     background-color: #e6e0d5;
     border: 1px solid #be935b;
-    margin-top: 5px;
+    margin-top: 10px;
     padding: 10px;
-    width: 50%;
+    width: 70%;
     /* text-align: left; */
 }
 
